adding experience module

--- a/styles/components/_experiment.scss
+++ b/styles/components/_experiment.scss
@@ -1,9 +1,10 @@
 .experiment {
+  @include clearfix;
 }
 
 .experiment__text {
   width: span(all);
-  padding: space(8) space(6);
+  padding: space(8) space(6) 0;
   text-align: center;
   float: left;
 }
@@ -37,5 +38,5 @@
   width: span(all);
   float: left;
   text-align: center;
-  padding: space(4) 0;
+  padding: space(4) 0 space(8);
 }
