--- a/styles/style.scss
+++ b/styles/style.scss
@@ -49,6 +49,7 @@
 @import 'components/demo';
 @import 'components/resource';
 @import 'components/experiment';
+@import 'components/experience';
 // Shaaaaame
 // -------------------------
 @import 'shame';
