Adding Footer & Additional Resource section

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -50,6 +50,8 @@
 @import 'components/resource';
 @import 'components/experiment';
 @import 'components/experience';
+@import 'components/additional-resources';
+@import 'components/about';
 // Shaaaaame
 // -------------------------
 @import 'shame';
