--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,4 +1,58 @@
 .footer {
+  @include clearfix;
   background-color: $black;
-  padding: space(8) 0;
+  padding: space(8) space(4);
+  color: $white;
+}
+
+.footer__logo {
+  height: space(4);
+  width: auto;
+}
+
+.footer__title {
+  font-weight: 600;
+  margin-top: space(2);
+  display: block;
+
+  @include bp(medium) {
+    margin-top: 0;
+  }
+}
+
+.footer__list {
+  margin: 0;
+  padding: 0;
+
+  a {
+    @include typesize(-1);
+    color: $white;
+    font-weight: 400;
+  }
+}
+
+.footer__legal {
+  @include clearfix;
+  @include typesize(-1);
+  width: span(all);
+  float: left;
+  border-top: 1px solid rgba(255, 255, 255, 0.4);
+  margin-top: space(4);
+  padding-top: space(2);
+
+}
+
+.footer__legal-list {
+  float: left;
+  margin: 0;
+  padding: 0;
+
+  li {
+    float: left;
+    margin-right: space(4);
+  }
+
+  a {
+    color: $white;
+  }
 }
