--- a/styles/components/_demo.scss
+++ b/styles/components/_demo.scss
@@ -9,7 +9,7 @@
     padding: space(4);
     display: flex;
     height: 400px;
-    box-shadow: none;
+    box-shadow: inset 0px -200px 100px rgba(0, 0, 0, 0.32);
   }
 
   @include bp(large) {
