--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,6 +14,8 @@
 // -------------------------
 @import '../node_modules/susy/sass/susy';
 @import '../node_modules/mappy-breakpoints/mappy-breakpoints';
+@import '../node_modules/react-modal-video/scss/modal-video';
+
 
 // Utilities
 // -------------------------
@@ -46,6 +48,7 @@
 @import 'components/hero';
 @import 'components/header';
 @import 'components/footer';
+@import 'components/video';
 @import 'components/demo';
 @import 'components/resource';
 @import 'components/experiment';
