Making requested changes from Brigade/Design team.

--- a/styles/components/_additional-resources.scss
+++ b/styles/components/_additional-resources.scss
@@ -4,6 +4,10 @@
   background-color: $black;
   color: $white;
   text-align: center;
+
+  h2 {
+    margin-bottom: space(6);
+  }
 }
 
 .additional__resource {
