absolute URLS to relative URLs

--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -28,7 +28,7 @@
 }
 
 .about__photo {
-  background-image: url('/static/img/about/bg.png');
+  background-image: url('static/img/about/bg.png');
   background-size: cover;
   height: 100%;
   display: none;
