--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,6 +47,7 @@
 @import 'components/experience';
 @import 'components/additional-resources';
 @import 'components/about';
+@import 'components/featured';
 // Shaaaaame
 // -------------------------
 @import 'shame';
