Firefox Reality Page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -48,6 +48,11 @@
 @import 'components/additional-resources';
 @import 'components/about';
 @import 'components/featured';
+
+// Components
+// -------------------------
+@import 'pages/firefoxreality';
+
 // Shaaaaame
 // -------------------------
 @import 'shame';
