--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -27,7 +27,7 @@ $breakpoints: (
 
 // Type
 // -------------------------
-@import url('https://fonts.googleapis.com/css?family=Zilla+Slab|Zilla+Slab+Highlight');
+@import url('https://fonts.googleapis.com/css?family=Zilla+Slab|Zilla+Slab+Highlight|Open+Sans');
 
 $base-font-size: 16px;
 $base-line-height: 1.5;
