Multiple bug fixes and tiny enhancements

--- a/src/styles/components/_demo.scss
+++ b/src/styles/components/_demo.scss
@@ -4,6 +4,12 @@
   margin-bottom: space(2);
   box-shadow: inset 0 200px 200px rgba(0, 0, 0, 0.5);
   position: relative;
+  opacity: 1;
+  transition: opacity $base-time $base-ease;
+
+  &:hover {
+    opacity: 0.9;
+  }
 
   @include bp(medium) {
     margin-bottom: space(4);
@@ -44,15 +50,13 @@
 .demo__link {
   margin-bottom: 0;
 
+  color: $purple-light;
+  font-weight: bold;
+  border-bottom: 2px solid $purple-light;
+  transition: color $base-time $base-ease;
+
   @include bp(large) {
     @include rem(font-size, 1.2rem);
-  }
-
-  a {
-    color: $purple-light;
-    font-weight: bold;
-    border-bottom: 2px solid $purple-light;
-    transition: color $base-time $base-ease;
   }
 
   a:hover {
@@ -64,6 +68,11 @@
   position: absolute;
   bottom: 0;
   right: 0;
+  display: none;
+
+  @include bp(small) {
+    display: block;
+  }
 
   ul {
     @include clearfix;
