--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,6 +3,11 @@
   background-color: $black;
   padding: space(8) space(4);
   color: $white;
+  margin-bottom: 10px;
+
+  @include bp(medium) {
+    margin-bottom: 0;
+  }
 }
 
 .footer__logo {
@@ -12,7 +17,7 @@
 
 .footer__title {
   font-weight: 600;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   margin: space(4) 0 space(2);
   display: block;
 
@@ -34,7 +39,7 @@
     font-size: 14px;
     font-weight: 400;
     border-bottom: 1px solid $black;
-    transition: border-bottom .2s $base-ease;
+    transition: border-bottom 0.2s $base-ease;
   }
 
   a:hover {
@@ -50,7 +55,6 @@
   border-top: 1px solid rgba(255, 255, 255, 0.4);
   margin-top: space(4);
   padding-top: space(2);
-
 }
 
 .footer__legal-list {
