--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,16 +1,20 @@
 .hero {
-  padding: space(11) space(4);
+  padding: space(6) space(4);
   text-align: center;
 
   h1 {
     margin-bottom: 0;
   }
+
+  @include bp(medium) {
+    padding: space(10) space(4);
+  }
 }
 
 .hero__text {
-
+  line-height: 2.5rem;
   @include bp(max-width medium) {
-    @include typesize(2);
+    font-size: 1.9rem;
   }
 }
 
