--- a/src/styles/components/_featured.scss
+++ b/src/styles/components/_featured.scss
@@ -6,6 +6,13 @@
   color: $white;
   text-align: center;
   overflow: hidden;
+  display: block;
+  transition: opacity 0.3s ease;
+
+  &:hover {
+    color: white;
+    opacity: 0.9;
+  }
 
   @include bp(medium) {
     margin-bottom: space(4);
