add Oxford commas; fix typos; change "web" to "Web"

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -3,7 +3,7 @@
 // ----------------------------------------------------------------------------
 
 /**
-This is a system for easiliy creating buttons, and spinning up new button
+This is a system for easily creating buttons, and spinning up new button
 styles.
 This uses a mixin that can be found at /util/mixins/_buttons.scss
 */
